Prevent canvas selection on mobile devices.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,10 +1,16 @@
 @import "compass/reset";
 
+@import "compass/css3/user-interface";
+
 body {
   background-color: black;
   color: white;
 
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+canvas {
+  @include user-select(none);
 }
 
 .game {
